--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: matreshka-runner
+    runs-on: self-hosted
     steps:
       - name: Checkout репозитория
         uses: actions/checkout@v4
@@ -21,7 +21,7 @@ jobs:
           docker build --build-arg JAR_FILE=target/matreshka-core-1.0-SNAPSHOT.jar -t matreshka-erp:latest .
 
   deploy:
-    runs-on: matreshka-runner
+    runs-on: self-hosted
     needs: build
     steps:
       - name: Checkout репозитория
