Restart app after deployment

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,4 @@ jobs:
         working-directory: deploy
         run: |
           helm upgrade -i matreshka-erp .
+          kubectl rollout restart deployment/matreshka-erp
