--- a/deploy/templates/frontend-ingress.yaml
+++ b/deploy/templates/frontend-ingress.yaml
@@ -1,9 +1,17 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: matreshka-erp
+  annotations:
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+  name: matreshka-frontend
+  labels:
+    app: matreshka-erp
 spec:
   ingressClassName: nginx
+  tls:
+    - hosts:
+        - matreshka.bmstr.ru
+      secretName: matreshka-frontend-tls
   rules:
     - host: matreshka.bmstr.ru
       http:
@@ -11,7 +19,7 @@ spec:
           - pathType: Prefix
             backend:
               service:
-                name: matreshka-erp
+                name: matreshka-frontend
                 port:
                   number: 80
             path: /
