--- a/deploy/templates/frontend-service.yaml
+++ b/deploy/templates/frontend-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: matreshka-erp
+  name: matreshka-frontend
   labels:
     app: matreshka-erp
 spec:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: matreshka-erp
+    app: matreshka-frontend
