Try to fix pipeline

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Build frontend
         working-directory: frontend
         run: |
+          source ~/.zshrc
           npm install
           npm run build
 
