--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build frontend
         working-directory: frontend
         run: |
-          source ~/.zshrc
+          source ~/.bashrc
           npm install
           npm run build
 
